# Intern_cpp_ABC

./: CMakeLists.txt  README.md
00_Introduction/: CMakeLists.txt  main.cpp
01_Templates/: CMakeLists.txt  main.cpp
05_OpenCV/: CMakeLists.txt  main.cpp
06_OpenCV/: CMakeLists.txt  main.cpp
07_OpenCV_3/: CMakeLists.txt  main.cpp
08_Microcontrollers/: Info.txt  Microcontroller.pdsprj  main.cpp
11_MySQL/: CMakeLists.txt  Info.txt  main.cpp
