cmake_minimum_required(VERSION 3.12)
project(05_OpenCV)
set("OpenCV_DIR" "D:/Programs/OpenCV-4.0/build")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("images")
add_executable(05_OpenCV main.cpp)
add_definitions("-DPath_to_img=\"${CMAKE_SOURCE_DIR}/images/img.jpeg\"")
target_link_libraries(05_OpenCV ${OpenCV_LIBS})