cmake_minimum_required(VERSION 3.12)
project(06_OpenCV)
set("OpenCV_DIR" "D:/Programs/OpenCV-4.0/build")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("images")
add_executable(06_OpenCV main.cpp)
add_definitions("-DPath_to_img_src=\"${CMAKE_SOURCE_DIR}/images/img_src.jpg\"")
add_definitions("-DPath_to_img_dst=\"${CMAKE_SOURCE_DIR}/images/img_dst.jpg\"")
target_link_libraries(06_OpenCV ${OpenCV_LIBS})