cmake_minimum_required(VERSION 3.12)
project(11_MySql)
include_directories("C:/Program Files/MySQL/Connector C++ 8.0/include")
include_directories("C:/Program Files/MySQL/Connector C++ 8.0/lib64")
include_directories("D:/Programs/boost")
add_executable(11_MySql main.cpp)
link_libraries(11_MySql  "C:/Program Files/MySQL/Connector C++ 8.0/lib64/vs14")
target_link_libraries(11_MySql "C:/Program Files/MySQL/Connector C++ 8.0/lib64/vs14/mysqlcppconn.lib")
link_libraries(11_MySql "D:/Programs/boost")